--- a/src/front/styles/videocall.css
+++ b/src/front/styles/videocall.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://i.imgur.com/E7ryZx3.png);
+    background-image: url(https://i.imgur.com/KuxOIpu.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
